// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-input renders with button text FOO 1`] = `
<amplify-button>
  <!---->
  <button class="amplify-ui--button css-1qhle2w" type="button">
    FOO
  </button>
</amplify-button>
`;

exports[`amplify-input renders with no button text 1`] = `
<amplify-button>
  <!---->
  <button class="amplify-ui--button css-1qhle2w" type="button"></button>
</amplify-button>
`;
